converted gan code to process road images

--- a/image_processing.ipynb
+++ b/image_processing.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,27 +46,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 981 images belonging to 2 classes.\n"
+      "Found 950 images belonging to 1 classes.\n"
      ]
     }
    ],
    "source": [
     "image_size = 150\n",
-    "batch_size = 32\n",
+    "batch_size = 25\n",
     "\n",
     "images_generator = datagen.flow_from_directory(\n",
     "                images_path,  # Source directory for the training images\n",
     "                target_size=(image_size, image_size),\n",
     "                batch_size=batch_size,\n",
     "                # Since we use binary_crossentropy loss, we need binary labels\n",
-    "                class_mode='binary')"
+    "                class_mode=None)"
    ]
   },
   {
@@ -80,8 +80,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -120,57 +125,6 @@
        "          [0., 0., 0.],\n",
        "          [0., 0., 0.]],\n",
        " \n",
-       "         [[1., 1., 1.],\n",
-       "          [0., 0., 0.],\n",
-       "          [0., 0., 0.],\n",
-       "          ...,\n",
-       "          [0., 0., 0.],\n",
-       "          [0., 0., 0.],\n",
-       "          [0., 0., 0.]],\n",
-       " \n",
-       "         [[1., 1., 1.],\n",
-       "          [0., 0., 0.],\n",
-       "          [0., 0., 0.],\n",
-       "          ...,\n",
-       "          [0., 0., 0.],\n",
-       "          [0., 0., 0.],\n",
-       "          [0., 0., 0.]]],\n",
-       " \n",
-       " \n",
-       "        [[[0., 0., 0.],\n",
-       "          [0., 0., 0.],\n",
-       "          [1., 1., 1.],\n",
-       "          ...,\n",
-       "          [0., 0., 0.],\n",
-       "          [0., 0., 0.],\n",
-       "          [0., 0., 0.]],\n",
-       " \n",
-       "         [[0., 0., 0.],\n",
-       "          [0., 0., 0.],\n",
-       "          [1., 1., 1.],\n",
-       "          ...,\n",
-       "          [0., 0., 0.],\n",
-       "          [0., 0., 0.],\n",
-       "          [0., 0., 0.]],\n",
-       " \n",
-       "         [[0., 0., 0.],\n",
-       "          [0., 0., 0.],\n",
-       "          [0., 0., 0.],\n",
-       "          ...,\n",
-       "          [0., 0., 0.],\n",
-       "          [0., 0., 0.],\n",
-       "          [0., 0., 0.]],\n",
-       " \n",
-       "         ...,\n",
-       " \n",
-       "         [[0., 0., 0.],\n",
-       "          [0., 0., 0.],\n",
-       "          [0., 0., 0.],\n",
-       "          ...,\n",
-       "          [0., 0., 0.],\n",
-       "          [0., 0., 0.],\n",
-       "          [0., 0., 0.]],\n",
-       " \n",
        "         [[0., 0., 0.],\n",
        "          [0., 0., 0.],\n",
        "          [0., 0., 0.],\n",
@@ -198,14 +152,14 @@
        " \n",
        "         [[0., 0., 0.],\n",
        "          [0., 0., 0.],\n",
-       "          [1., 1., 1.],\n",
+       "          [0., 0., 0.],\n",
        "          ...,\n",
        "          [0., 0., 0.],\n",
        "          [0., 0., 0.],\n",
        "          [0., 0., 0.]],\n",
        " \n",
        "         [[0., 0., 0.],\n",
-       "          [1., 1., 1.],\n",
+       "          [0., 0., 0.],\n",
        "          [0., 0., 0.],\n",
        "          ...,\n",
        "          [0., 0., 0.],\n",
@@ -216,11 +170,62 @@
        " \n",
        "         [[0., 0., 0.],\n",
        "          [0., 0., 0.],\n",
-       "          [0., 0., 0.],\n",
+       "          [1., 1., 1.],\n",
        "          ...,\n",
        "          [0., 0., 0.],\n",
        "          [0., 0., 0.],\n",
        "          [1., 1., 1.]],\n",
+       " \n",
+       "         [[0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          ...,\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.]],\n",
+       " \n",
+       "         [[0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          ...,\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.]]],\n",
+       " \n",
+       " \n",
+       "        [[[0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          ...,\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.]],\n",
+       " \n",
+       "         [[0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          ...,\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.]],\n",
+       " \n",
+       "         [[0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          ...,\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.]],\n",
+       " \n",
+       "         ...,\n",
+       " \n",
+       "         [[0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          ...,\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.]],\n",
        " \n",
        "         [[0., 0., 0.],\n",
        "          [0., 0., 0.],\n",
@@ -268,7 +273,58 @@
        " \n",
        "         ...,\n",
        " \n",
+       "         [[1., 1., 1.],\n",
+       "          [1., 1., 1.],\n",
+       "          [0., 0., 0.],\n",
+       "          ...,\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.]],\n",
+       " \n",
        "         [[0., 0., 0.],\n",
+       "          [1., 1., 1.],\n",
+       "          [0., 0., 0.],\n",
+       "          ...,\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.]],\n",
+       " \n",
+       "         [[0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [1., 1., 1.],\n",
+       "          ...,\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.]]],\n",
+       " \n",
+       " \n",
+       "        [[[0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          ...,\n",
+       "          [1., 1., 1.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.]],\n",
+       " \n",
+       "         [[0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          ...,\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.]],\n",
+       " \n",
+       "         [[0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.],\n",
+       "          ...,\n",
+       "          [1., 1., 1.],\n",
+       "          [0., 0., 0.],\n",
+       "          [0., 0., 0.]],\n",
+       " \n",
+       "         ...,\n",
+       " \n",
+       "         [[1., 1., 1.],\n",
        "          [0., 0., 0.],\n",
        "          [0., 0., 0.],\n",
        "          ...,\n",
@@ -285,7 +341,7 @@
        "          [0., 0., 0.]],\n",
        " \n",
        "         [[0., 0., 0.],\n",
-       "          [0., 0., 0.],\n",
+       "          [1., 1., 1.],\n",
        "          [0., 0., 0.],\n",
        "          ...,\n",
        "          [0., 0., 0.],\n",
@@ -341,70 +397,19 @@
        "          ...,\n",
        "          [0., 0., 0.],\n",
        "          [0., 0., 0.],\n",
-       "          [0., 0., 0.]]],\n",
-       " \n",
-       " \n",
-       "        [[[1., 1., 1.],\n",
-       "          [0., 0., 0.],\n",
-       "          [0., 0., 0.],\n",
-       "          ...,\n",
-       "          [0., 0., 0.],\n",
-       "          [0., 0., 0.],\n",
-       "          [0., 0., 0.]],\n",
-       " \n",
-       "         [[0., 0., 0.],\n",
-       "          [0., 0., 0.],\n",
-       "          [0., 0., 0.],\n",
-       "          ...,\n",
-       "          [0., 0., 0.],\n",
-       "          [0., 0., 0.],\n",
-       "          [0., 0., 0.]],\n",
-       " \n",
-       "         [[0., 0., 0.],\n",
-       "          [0., 0., 0.],\n",
-       "          [0., 0., 0.],\n",
-       "          ...,\n",
-       "          [0., 0., 0.],\n",
-       "          [0., 0., 0.],\n",
-       "          [0., 0., 0.]],\n",
-       " \n",
-       "         ...,\n",
-       " \n",
-       "         [[0., 0., 0.],\n",
-       "          [0., 0., 0.],\n",
-       "          [1., 1., 1.],\n",
-       "          ...,\n",
-       "          [0., 0., 0.],\n",
-       "          [0., 0., 0.],\n",
-       "          [0., 0., 0.]],\n",
-       " \n",
-       "         [[1., 1., 1.],\n",
-       "          [1., 1., 1.],\n",
-       "          [0., 0., 0.],\n",
-       "          ...,\n",
-       "          [0., 0., 0.],\n",
-       "          [1., 1., 1.],\n",
-       "          [1., 1., 1.]],\n",
-       " \n",
-       "         [[0., 0., 0.],\n",
-       "          [0., 0., 0.],\n",
-       "          [0., 0., 0.],\n",
-       "          ...,\n",
-       "          [0., 0., 0.],\n",
-       "          [0., 0., 0.],\n",
        "          [0., 0., 0.]]]], dtype=float32),\n",
        " array([1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.,\n",
        "        1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.],\n",
        "       dtype=float32))"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "images_generator[]"
+    "images_generator[0]"
    ]
   },
   {
@@ -413,15 +418,148 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.path"
+    "class GAN():\n",
+    "    def __init__(self):\n",
+    "        self.img_rows = 150\n",
+    "        self.img_cols = 150\n",
+    "        self.channels = 1\n",
+    "        self.img_shape = (self.img_rows, self.img_cols, self.channels)\n",
+    "        self.latent_dim = 100\n",
+    "\n",
+    "        optimizer = Adam(0.0002, 0.5)\n",
+    "\n",
+    "        # Build and compile the discriminator\n",
+    "        self.discriminator = self.build_discriminator()\n",
+    "        self.discriminator.compile(loss='binary_crossentropy',\n",
+    "            optimizer=optimizer,\n",
+    "            metrics=['accuracy'])\n",
+    "\n",
+    "        # Build the generator\n",
+    "        self.generator = self.build_generator()\n",
+    "\n",
+    "        # The generator takes noise as input and generates imgs\n",
+    "        z = Input(shape=(self.latent_dim,))\n",
+    "        img = self.generator(z)\n",
+    "\n",
+    "        # For the combined model we will only train the generator\n",
+    "        self.discriminator.trainable = True\n",
+    "\n",
+    "        # The discriminator takes generated images as input and determines validity\n",
+    "        validity = self.discriminator(img)\n",
+    "\n",
+    "        # The combined model  (stacked generator and discriminator)\n",
+    "        # Trains the generator to fool the discriminator\n",
+    "        self.combined = Model(z, validity)\n",
+    "        self.combined.compile(loss='binary_crossentropy', optimizer=optimizer)\n",
+    "\n",
+    "\n",
+    "    def build_generator(self):\n",
+    "\n",
+    "        model = Sequential()\n",
+    "\n",
+    "        model.add(Dense(256, input_dim=self.latent_dim))\n",
+    "        model.add(LeakyReLU(alpha=0.2))\n",
+    "        model.add(BatchNormalization(momentum=0.8))\n",
+    "        model.add(Dense(512))\n",
+    "        model.add(LeakyReLU(alpha=0.2))\n",
+    "        model.add(BatchNormalization(momentum=0.8))\n",
+    "        model.add(Dense(1024))\n",
+    "        model.add(LeakyReLU(alpha=0.2))\n",
+    "        model.add(BatchNormalization(momentum=0.8))\n",
+    "        model.add(Dense(np.prod(self.img_shape), activation='tanh'))\n",
+    "        model.add(Reshape(self.img_shape))\n",
+    "\n",
+    "        model.summary()\n",
+    "\n",
+    "        noise = Input(shape=(self.latent_dim,))\n",
+    "        img = model(noise)\n",
+    "\n",
+    "        return Model(noise, img)\n",
+    "\n",
+    "    def build_discriminator(self):\n",
+    "\n",
+    "        model = Sequential()\n",
+    "\n",
+    "        model.add(Flatten(input_shape=self.img_shape))\n",
+    "        model.add(Dense(512))\n",
+    "        model.add(LeakyReLU(alpha=0.2))\n",
+    "        model.add(Dense(256))\n",
+    "        model.add(LeakyReLU(alpha=0.2))\n",
+    "        model.add(Dense(1, activation='sigmoid'))\n",
+    "        model.summary()\n",
+    "\n",
+    "        img = Input(shape=self.img_shape)\n",
+    "        validity = model(img)\n",
+    "\n",
+    "        return Model(img, validity)\n",
+    "\n",
+    "    def train(self, epochs, batch_size=128, sample_interval=50):\n",
+    "\n",
+    "        # Load the dataset\n",
+    "        (X_train, _), (_, _) = mnist.load_data()\n",
+    "\n",
+    "        # Rescale -1 to 1\n",
+    "        X_train = X_train / 127.5 - 1.\n",
+    "        X_train = np.expand_dims(X_train, axis=3)\n",
+    "\n",
+    "        # Adversarial ground truths\n",
+    "        valid = np.ones((batch_size, 1))\n",
+    "        fake = np.zeros((batch_size, 1))\n",
+    "\n",
+    "        for epoch in range(epochs):\n",
+    "\n",
+    "            # ---------------------\n",
+    "            #  Train Discriminator\n",
+    "            # ---------------------\n",
+    "\n",
+    "            # Select a random batch of images\n",
+    "            idx = np.random.randint(0, X_train.shape[0], batch_size)\n",
+    "            imgs = X_train[idx]\n",
+    "\n",
+    "            noise = np.random.normal(0, 1, (batch_size, self.latent_dim))\n",
+    "\n",
+    "            # Generate a batch of new images\n",
+    "            gen_imgs = self.generator.predict(noise)\n",
+    "\n",
+    "            # Train the discriminator\n",
+    "            d_loss_real = self.discriminator.train_on_batch(imgs, valid)\n",
+    "            d_loss_fake = self.discriminator.train_on_batch(gen_imgs, fake)\n",
+    "            d_loss = 0.5 * np.add(d_loss_real, d_loss_fake)\n",
+    "\n",
+    "            # ---------------------\n",
+    "            #  Train Generator\n",
+    "            # ---------------------\n",
+    "\n",
+    "            noise = np.random.normal(0, 1, (batch_size, self.latent_dim))\n",
+    "\n",
+    "            # Train the generator (to have the discriminator label samples as valid)\n",
+    "            g_loss = self.combined.train_on_batch(noise, valid)\n",
+    "\n",
+    "            # Plot the progress\n",
+    "            print (\"%d [D loss: %f, acc.: %.2f%%] [G loss: %f]\" % (epoch, d_loss[0], 100*d_loss[1], g_loss))\n",
+    "\n",
+    "            # If at save interval => save generated image samples\n",
+    "            if epoch % sample_interval == 0:\n",
+    "                self.sample_images(epoch)\n",
+    "\n",
+    "    def sample_images(self, epoch):\n",
+    "        r, c = 5, 5\n",
+    "        noise = np.random.normal(0, 1, (r * c, self.latent_dim))\n",
+    "        gen_imgs = self.generator.predict(noise)\n",
+    "\n",
+    "        # Rescale images 0 - 1\n",
+    "        gen_imgs = 0.5 * gen_imgs + 0.5\n",
+    "\n",
+    "        fig, axs = plt.subplots(r, c)\n",
+    "        cnt = 0\n",
+    "        for i in range(r):\n",
+    "            for j in range(c):\n",
+    "                axs[i,j].imshow(gen_imgs[cnt, :,:,0], cmap='gray')\n",
+    "                axs[i,j].axis('off')\n",
+    "                cnt += 1\n",
+    "        fig.savefig(\"images/generated_roads/%d.png\" % epoch)\n",
+    "        plt.close()\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
