attempted various fixes, no success yet. attempted solutions documented

--- a/explore_gan.ipynb
+++ b/explore_gan.ipynb
@@ -179,7 +179,7 @@
     "                axs[i,j].axis('off')\n",
     "                cnt += 1\n",
     "        fig.savefig(\"images/mnist_gan/%d.png\" % epoch)\n",
-    "        plt.close()\n"
+    "        plt.close()"
    ]
   },
   {
