--- a/explore_gan.ipynb
+++ b/explore_gan.ipynb
@@ -30260,9 +30260,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (ml_base)",
+   "display_name": "learn-env",
    "language": "python",
-   "name": "ml_base"
+   "name": "learn-env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -30274,7 +30274,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
