--- a/one_filter_attempts.ipynb
+++ b/one_filter_attempts.ipynb
@@ -492,9 +492,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "learn-env",
+   "display_name": "ml",
    "language": "python",
-   "name": "learn-env"
+   "name": "ml"
   },
   "language_info": {
    "codemirror_mode": {
@@ -506,7 +506,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
